--- a/paquescolar-web/src/main/webapp/app/con06ExcelSeguimientoDepaReports.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con06ExcelSeguimientoDepaReports.xhtml
@@ -26,10 +26,15 @@
                         <p:outputLabel value="Filtro de busqueda"/>
                     </h1>
                     <p:panelGrid id="pnlFiltro" columns="2" columnClasses="col2_label,col10" style="width: 100%; border:0px none; background-color:transparent;" styleClass="form-group ui-panelgrid-blank">
-                        <p:outputLabel value="1. Departamento: "/>
-                        <p:selectOneMenu id="codigoDepartamento" value="#{graficoController.codigoDepartamento}" required="true">
+                        <p:outputLabel value="Departamento: " rendered="false"/>
+                        <p:selectOneMenu id="codigoDepartamento" value="#{graficoController.codigoDepartamento}" required="true" rendered="false">
                             <f:selectItem itemLabel="Seleccione un departamento" itemValue="" />
                             <f:selectItems value="#{catalogosGeneralesController.lstDepartamentos}" var="depa" itemValue="#{depa.codigoDepartamento}" itemLabel="#{depa.codigoDepartamento} - #{depa.nombreDepartamento}"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel value="Rubro de Adquisición: "/>
+                        <p:selectOneMenu id="rubro" value="#{graficoController.idDetProcesoAdq}" required="true">
+                            <f:selectItem itemLabel="Seleccione un rubro" itemValue="" />
+                            <f:selectItems value="#{graficoController.recuperarProceso.procesoAdquisicion.detalleProcesoAdqList}" var="rubro" itemValue="#{rubro.idDetProcesoAdq}" itemLabel="#{rubro.idRubroAdq.descripcionRubro}"/>
                         </p:selectOneMenu>
                     </p:panelGrid>
                 </div>
