--- a/boleta-web/src/main/webapp/app/index.xhtml
+++ b/boleta-web/src/main/webapp/app/index.xhtml
@@ -12,12 +12,10 @@
             <p:panelGrid columns="2">
                 <p:outputLabel value="usuario: "/>
                 <p:inputText value="#{enviarCorreoMB.usuario}" size="50"/> 
-                <p:outputLabel value="codDepa: "/>
-                <p:inputText value="#{enviarCorreoMB.codDepa}"/>
-                <p:outputLabel value="codigo ultimo "/>
-                <p:inputText value="#{enviarCorreoMB.codigoUltimo}"/>
-                <p:outputLabel value="Nombre archivo "/>
-                <p:inputText value="#{enviarCorreoMB.codigoUltimo}"/>
+                <p:outputLabel value="Titulo correo"/>
+                <p:inputText value="#{enviarCorreoMB.tituloCorreo}"/>
+                <p:outputLabel value="Mensaje correo"/>
+                <p:inputTextarea value="#{enviarCorreoMB.mensajeCorreo}"/>
                 <p:outputLabel value="Mes y anho:"/>
                 <p:outputPanel>
                     <p:selectOneMenu value="#{enviarCorreoMB.mes}">
@@ -41,12 +39,8 @@
                     </p:selectOneMenu>
                 </p:outputPanel>
                 <f:facet name="footer">
-                    <p:commandButton value="Enviar" action="#{enviarCorreoMB.enviarCorreos()}" rendered="false"/>
-                    <p:commandButton value="Continuar" action="#{enviarCorreoMB.enviarCorreos()}" rendered="false"/>
                     <p:commandButton value="Separar" action="#{enviarCorreoMB.separacionDeBoletas()}"/>
                     <p:commandButton value="Enviar 1 solo pdf" action="#{enviarCorreoMB.enviarUnSoloCorreo()}"/>
-                    <p:spacer width="10"/>
-                    <p:commandButton value="Enviar URL" action="#{enviarCorreoMB.enviarBoleta()}"/>
                 </f:facet>
             </p:panelGrid>
         </h:form>
