--- a/paquescolar-web/src/main/webapp/app/edit06Seguimiento.xhtml
+++ b/paquescolar-web/src/main/webapp/app/edit06Seguimiento.xhtml
@@ -12,7 +12,8 @@
             <p:menuitem value="Modificar" icon="fa fa-edit" id="mtmModificar"
                         update="pnlFiltro pnlEstado " disabled="true"/>
             <p:menuitem value="Guardar" icon="fa fa-save" disabled="true"/>
-            <p:menuitem value="Imprimir" icon="fa fa-print" disabled="true" />
+            <p:menuitem value="Imprimir" icon="fa fa-print" action="#{segFisicoController.imprimir()}"  ajax="false"
+                        disabled="#{segFisicoController.recepcion.idEstadoSeguimiento.idEstadoSeguimiento eq 2}" />
             <p:menuitem value="Principal" icon="fa fa-home" url="#{request.contextPath}/app/inicial.mined"/>  
 
             <f:facet  name="options">  
@@ -64,10 +65,10 @@
                                 </h:panelGrid>
                                 <h:outputText value="Estado del Seguimiento: "/>
                                 <h:outputText value="#{segFisicoController.estadoSeguimiento}" rendered="#{segFisicoController.estadoSeguimiento eq 'EN PROCESO'}" style="color:green; font-weight: bold;"/>
-                                <h:outputText value="#{segFisicoController.estadoSeguimiento}" rendered="#{segFisicoController.estadoSeguimiento eq 'ENTREGADO'}" style="color:red; font-weight: bold;"/>
+                                <h:outputText value="#{segFisicoController.estadoSeguimiento}" rendered="#{segFisicoController.estadoSeguimiento eq 'ENTREGADO'}" style="color: #0000ff; font-weight: bold;"/>
                             </p:panelGrid>
 
-                            <h4>
+                            <h4> 
                                 <i class="fa fa-calendar" aria-hidden="true"></i>
                                 <p:spacer width="10"/>
                                 <h:outputText value="Fechas de Orden de Inicio"  style="font-style: italic; font-weight: bold;"/>
@@ -77,7 +78,9 @@
                                 <p:panelGrid columns="2" columnClasses="col6,col6" 
                                              styleClass="ui-panelgrid-blank form-group form-elements" style="border:0px none; background-color:transparent;">
                                     <h:outputLabel value="#{segFisicoController.esDosUniformes ? 'Fecha Inicio Primera Entrega:':'Fecha:'}"/>
-                                    <p:calendar value="#{segFisicoController.fechaEntregaUno}" pattern="dd/MM/yyyy" size="10" id="fechaUno" locale="es" navigator="true"  disabled="true"/>
+                                    <p:calendar value="#{segFisicoController.fechaEntregaUno}" pattern="dd/MM/yyyy" size="10" id="fechaUno" locale="es" navigator="true"  disabled="#{!segFisicoController.uniforme}">
+                                        <p:ajax event="dateSelect" listener="#{segFisicoController.onDateSelect}" />
+                                    </p:calendar>
                                 </p:panelGrid>
                                 <p:panelGrid columns="2" columnClasses="col6,col6" rendered="#{segFisicoController.esDosUniformes}"
                                              styleClass="ui-panelgrid-blank form-group form-elements" style="border:0px none; background-color:transparent;">
@@ -121,11 +124,11 @@
                                      sortBy="#{detalle.fechaRecepcion}">
                             <f:facet name="header">  
                                 <p:commandButton value="Agregar" icon="fa fa-plus-circle" action="#{segFisicoController.showDlgAgregarRecepcion}" disabled="#{segFisicoController.disableBtnTotal}">
-                                    <p:ajax event="dialogReturn" listener="#{segFisicoController.actualizarTblDetalleRecepcion}" update="tblDetalleSegF" />
+                                    <p:ajax event="dialogReturn" listener="#{segFisicoController.actualizarTblDetalleRecepcion}" update="tblDetalleSegF pnlContrato menuBar" />
                                     <f:param value="1" name="nuevo"/>
                                 </p:commandButton>
                                 <p:commandButton value="Entrega Total" icon="fa fa-plus-circle" action="#{segFisicoController.showDlgEntregaTotal}" disabled="#{segFisicoController.disableBtnTotal}">
-                                    <p:ajax event="dialogReturn" listener="#{segFisicoController.actualizarTblDetalleRecepcion}" update="tblDetalleSegF pnlContrato"/>
+                                    <p:ajax event="dialogReturn" listener="#{segFisicoController.actualizarTblDetalleRecepcion}" update="tblDetalleSegF pnlContrato menuBar"/>
                                     <f:param value="1" name="total"/>
                                 </p:commandButton>
                             </f:facet>
