Cambios menores en reporte de creditos

--- a/paquescolar-web/src/main/webapp/app/con05MontosporProveedor.xhtml
+++ b/paquescolar-web/src/main/webapp/app/con05MontosporProveedor.xhtml
@@ -120,6 +120,9 @@
                                     <f:convertNumber pattern="#,##0.00"/>
                                 </h:outputText>
                             </p:column> 
+                            <p:column headerText="Ref. Prestamo " width="50" styleClass="numero" >  
+                                <h:outputText value="#{ceNoDisponible.refPrestamo}" />
+                            </p:column> 
                         </p:dataTable> 
                     </p:outputPanel>
                 </div>
