--- a/paquescolar-web/src/main/webapp/app/principal.xhtml
+++ b/paquescolar-web/src/main/webapp/app/principal.xhtml
@@ -1,49 +1,18 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui"
-      lang="en">
-
-    <h:head>
-        <f:facet name="first">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-            <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-            <meta name="apple-mobile-web-app-capable" content="yes" />
-            <link href="#{request.contextPath}/resources/images/favicon.png" rel="shortcut icon"/>
-        </f:facet>
-        <title>Sistema de Paquetes Escolares</title>
-        <h:outputScript name="js/nanoscroller.js" library="paradise-layout" />
-        <h:outputScript name="js/layout.js" library="paradise-layout" />
-        <h:outputScript name="funciones-1.js" library="js"/>
-        <h:outputScript name="calendar-localization.js" library="js"/>
-        <ui:insert name="head"/>
-        <style>
-            html, body{ height: 100% !important;}
-        </style>
-    </h:head>
-
-    <h:body>
-        <h:form>
-            <div class="layout-wrapper2">
-                <ui:include src="../resources/template/topbar.xhtml" />
-
-
-                <div style="background-color: #00DD00; height: 100% !important; position: fixed; width: 100px;">
-                    
+<ui:composition 
+    xmlns="http://www.w3.org/1999/xhtml"
+    xmlns:ui="http://java.sun.com/jsf/facelets"
+    xmlns:p="http://primefaces.org/ui"
+    xmlns:f="http://java.sun.com/jsf/core"
+    template="#{pageContext.servletContext.contextPath}/resources/template/template2.xhtml"
+    xmlns:c="http://xmlns.jcp.org/jsp/jstl/core"
+    xmlns:h="http://xmlns.jcp.org/jsf/html">
+    <ui:define name="content">
+        <div class="ui-g">
+            <div class="ui-g-12">
+                <div class="card">
+                    <h:outputText value="prueba"/>
                 </div>
             </div>
-
-        </h:form>
-
-        <h:outputStylesheet name="personalizadas.css" library="css" />
-        <h:outputStylesheet name="css/nanoscroller.css" library="paradise-layout" />
-        <h:outputStylesheet name="css/animate.css" library="paradise-layout" />
-        <h:outputStylesheet name="css/layout-default.css" library="paradise-layout" />
-
-    </h:body>
-
-
-</html>
+        </div>
+    </ui:define>
+</ui:composition>
