--- a/paquescolar-web/src/main/webapp/app/reg02Oferta.xhtml
+++ b/paquescolar-web/src/main/webapp/app/reg02Oferta.xhtml
@@ -69,10 +69,13 @@
                                  emptyMessage="No se han agregado proveedores" rowIndexVar="rowId" styleClass="ui-datatable-borderless ui-datatable-reflow"
                                  rowKey="#{participante.idParticipante}" rowStyleClass="#{participante.estadoEliminacion eq 1 ? 'filaEliminada' : null}">
 
-                        <f:facet name="header">
-                            <h:commandLink>  
-                                <i class="fa fa-file-excel-o" aria-hidden="true"></i>
-                                <p:dataExporter type="xls" target="tblParticipantes" fileName="centrosComprometidosEnCredito" />  
+                        <f:facet name="header" class="centradoVertical">
+                            <p:spacer width="10" height="8"/>
+                            <h:commandLink style="float: right;">  
+                                <i class="fa fa-download"></i>
+                                <p:spacer width="10" height="8"/>
+                                <p:dataExporter type="xls" target="tblParticipantes" fileName="centrosComprometidosEnCredito" />
+                                <h:outputText value="Exportar"/>
                             </h:commandLink>  
                         </f:facet>
                         
